Fix: Make "Solicitações" menu visible
Adjusted the `margin-left` property for the `.signup` class in `src/components/Header/Header.module.css` and its corresponding media queries. This change repositions the header menus, ensuring that the "Solicitações" menu is visible on the screen.

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -68,7 +68,7 @@
 }
 
 .signup {
-  margin-left: 160px;
+  margin-left: 250px;
   color: #FF5733;
 }
 
@@ -213,7 +213,7 @@ nav ul li:hover .submenu2 ul li a {
   }
   
   .signup {
-    margin-left: 350px;
+    margin-left: 440px;
   }
   
   nav ul {
@@ -252,7 +252,7 @@ nav ul li:hover .submenu2 ul li a {
   }
   
   .signup {
-    margin-left: 160px;
+    margin-left: 250px;
   }
   
   nav ul {
@@ -277,7 +277,7 @@ nav ul li:hover .submenu2 ul li a {
   }
   
   .signup {
-    margin-left: 0px;
+    margin-left: 90px;
   }
   
   nav ul {
@@ -329,7 +329,7 @@ nav ul li:hover .submenu2 ul li a {
   }
   
   .signup {
-    margin-left: -50px;
+    margin-left: 40px;
   }
   
   nav ul {
@@ -354,7 +354,7 @@ nav ul li:hover .submenu2 ul li a {
   }
   
   .signup {
-    margin-left: 30px;
+    margin-left: 120px;
   }
   
   nav ul {
@@ -396,7 +396,7 @@ nav ul li:hover .submenu2 ul li a {
   }
   
   .signup {
-    margin-left: -100px;
+    margin-left: -10px;
   }
   
   nav ul {
@@ -449,7 +449,7 @@ nav ul li:hover .submenu2 ul li a {
   }
   
   .signup {
-    margin-left: 0px;
+    margin-left: 90px;
   }
   
   nav ul {
@@ -478,7 +478,7 @@ nav ul li:hover .submenu2 ul li a {
   }
   
   .signup {
-    margin-left: -130px;
+    margin-left: -40px;
   }
   
   nav ul {
@@ -549,7 +549,7 @@ nav ul li:hover .submenu2 ul li a {
   }
   
   .signup {
-    margin-left: -140px;
+    margin-left: -50px;
   }
   
   nav {
